...


                        // ---------------------------------  MY CHILDREN  ---------------------------------------------------


                        buildGradientSection(
                          title: "My Children",
                          icon: Icons.child_care,
                          children: [
                            Obx(() {
                              if (controller.children.isEmpty) {
                                return const Padding(
                                  padding: EdgeInsets.all(16.0),
...
      AlertDialog(
        title: const Text("Logout"),
        content: const Text("Are you sure you want to exit?"),
        actions: [
          TextButton(onPressed: () => Get.back(), child: const Text("Cancel")),
          ElevatedButton(
            key: const Key('confirm_logout_button'),
            style: ElevatedButton.styleFrom(backgroundColor: Colors.redAccent),
            onPressed: () async {
              Get.back();
              Get.find<AuthController>().logout(); // handles everything already
            },
            child: const Text("Logout", style: TextStyle(color: Colors.white)),
...
