...
                    ),
                  ),
                ],
              ),
              const SizedBox(height: 32),

              // "Next" Button
              ElevatedButton(
                onPressed: () {
                  // Handle Next action
                },
                style: ElevatedButton.styleFrom(
                  backgroundColor: primaryRed,
...
