...
                            ),

                          // -----------------------------------  PARENT PROFILE  --------------------------------------------------


                            _buildHomeItem(
                              key: const Key('parent_profile_home_button'),
                              iconPath: 'assets/images/parentprofile_icon.png',
                              label: 'Parent Profile',
                              onTap: () => Get.to(() => MainWrapperWithNoNavBar(child: const ParentProfile())),
                            ),

                          // ------------------------------------  NOTICE BOARD  ----------------------------------------------------
...
